tests/expectations/compiler/constants/local_const_shadows_global_fail.out
Error [EAST0372017]: The name `VALUE` is defined multiple times.
    --> compiler-test:5:15
     |
   1 |   const VALUE: u32 = 10;
     |         ^^^^^ previous definition of `VALUE` here
   ...
   5 |           const VALUE: u32 = 20;
     |                 ^^^^^ `VALUE` redefined here
